# grocery_tracker

./: .env.example  .gitignore  .windsurfrules  build.py  logging_config.yaml  main.py  pyproject.toml
.github/workflows/: test.yml
data/: commodities.test.csv  grocery_stores_chattanooga.csv  grocery_stores_chattanooga.test.csv  grocery_tracker.sqlite
slides/: index.html  index.md
src/config/: logging.py
src/tests/: conftest.py  test_main.py  test_plu_import.py  test_products_etl.py  test_store_etl.py
src/webapp/: config.py  database.py  main.py
src/webapp/adapters/: render.py
src/webapp/migrations/: 001_initial.py
src/webapp/products/: __init__.py  etl.py  fakeit.py  models.py  routes.py
src/webapp/static/: style.css
src/webapp/stores/: etl.py  models.py  routes.py
src/webapp/templates/: base.html  index.html  status.html
src/webapp/templates/products/: list.html
src/webapp/templates/stores/: _list.html  list.html
webapp/: main.py
