[project]
name = "local_first"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "python-dotenv==1.0.1",
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "PyYAML==6.0.1",
    "jinja2==3.1.3",
    "python-multipart==0.0.9",
]

[dependency-groups]
dev = [
    "httpx==0.24.1",
    "pytest>=8.4.1",
]
