[project]
name = "grocery_tracker"
version = "0.1.0"
description = "Tracks grocery items and prices."
requires-python = ">=3.13"
dependencies = [
    "python-dotenv==1.0.1",
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "PyYAML==6.0.1",
    "jinja2==3.1.3",
    "python-multipart==0.0.9",
    "sqlmodel>=0.0.24",
    "itsdangerous>=2.2.0",
]

[dependency-groups]
dev = [
    "httpx==0.24.1",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Support for class-based.*:DeprecationWarning",
    "ignore:Valid config keys have changed in V2.*:UserWarning"
]
